# claude-cortex

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude-plugin/: plugin.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
hooks/: hooks.json  post-tool-use.py  pre-compact.py  session-end.py  session-start.py
src/claude_cortex/: __init__.py  __main__.py  cli.py  config.py  knowledge_graph.py  mcp_server.py  miner.py  searcher.py  store.py
src/claude_cortex/backends/: base.py  chroma.py
src/claude_cortex/hooks/: capture.py
